Bug 300189 - phonon-gstreamer doesnt display stream meta-data correctly in amarok.
Summary: phonon-gstreamer doesnt display stream meta-data correctly in amarok.
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.5-git
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 2.7
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-17 10:15 UTC by cherub.rockin
Modified: 2012-11-21 23:18 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cherub.rockin 2012-05-17 10:15:58 UTC
phonon-gstreamer doesnt correctly display the  meta-data In Amarok, in the prorgress bar.. If I use phonon-mplayer or phonon-vlc it works correctly. It displays the meta-data in kmix though (under "Playback Streams").

Reproducible: Always

Steps to Reproduce:
1. Open Amarok
2. Load a Stream
3. Check meta-data
Actual Results:  
Stream loads perfectly fine, but doesn't load the meta-data, Displays Stream Details, and "Unknown"

Expected Results:  
It should display the correct meta-data of the song streaming currently.

Kmix displays the meta-data. which is confusing.

Video here: http://www.youtube.com/watch?v=CLXFIGSBx7E
Image here: http://ompldr.org/vZHMzOA/meta2.png
Comment 1 Andre Klapper 2012-05-17 11:14:15 UTC
If this is not an issue in Phonon / Amarok but gstreamer please move results to https://bugzilla.gnome.org/show_bug.cgi?id=676215 . Thanks!
Comment 2 cherub.rockin 2012-05-17 11:24:36 UTC
It isnt Gstreamer, if you do realise, that is my bug i reporteded to gnome (mistakenly)
Comment 3 Myriam Schweingruber 2012-05-20 03:22:25 UTC
*** Bug 300334 has been marked as a duplicate of this bug. ***
Comment 4 Matěj Laitl 2012-07-24 15:32:54 UTC
This is IMO a bug in Amarok, I've got a patch pending, moment.
Comment 5 znurree 2012-07-24 15:41:11 UTC
This bug is solved for me with latest Phonon-GStreamer (4.6.1).
Comment 6 Andre Klapper 2012-08-06 11:53:12 UTC
cherub.rockin: Can you confirm znurree's comment that this is fixed in Phonon-GStreamer 4.6.1?
Comment 7 Matěj Laitl 2012-11-21 23:18:58 UTC
Git commit 8d623b9329068d95de8d235f5c543f165976af26 by Matěj Laitl.
Committed on 24/07/2012 at 11:51.
Pushed by laitl into branch 'master'.

MultiTrack, EngineController: Fix MultiTrack API

In previous API, the only way to get next track url is
multiTrack->next(), which also advances the current index.
EngineController doesn't work this way, it needs to know next url in
the slotAboutToFinish(), but only should only advance the index in
slotNewTrackPlaying() (because aboutToFinish() may be even emitted
multiple times etc).

Correct the api so that the only non-const method is
setSource( int index ). Also change m_multiSource handling in
EngineController so that it is created and destroyed in
slotNewTrackPlaying(), which is a correct place to do that.

Also contains clean-ups to the MultiTrack classes.

This change fixes a bug for MultiTrack streams where metadata wouldn't
be updated because EngineController thinks different source is playing.
Therefore I think it fixes bug 300189. Reporters, please reopen the bug
if this patch doesn't fix the bug and provide full `amarok --debug`
output in that case.
FIXED-IN: 2.7

M  +18   -15   src/EngineController.cpp
M  +1    -1    src/EngineController.h
M  +25   -7    src/core-impl/capabilities/multisource/MultiSourceCapabilityImpl.cpp
M  +17   -23   src/core-impl/capabilities/multisource/MultiSourceCapabilityImpl.h
M  +34   -54   src/core-impl/meta/multi/MultiTrack.cpp
M  +65   -69   src/core-impl/meta/multi/MultiTrack.h
M  +3    -8    src/core/capabilities/MultiSourceCapability.cpp
M  +40   -22   src/core/capabilities/MultiSourceCapability.h
M  +28   -34   tests/core-impl/meta/multi/TestMetaMultiTrack.cpp
M  +5    -5    tests/core-impl/meta/multi/TestMetaMultiTrack.h

http://commits.kde.org/amarok/8d623b9329068d95de8d235f5c543f165976af26