src/EngineController.cpp
@@ -109,8 +109,6 @@ EngineController::~EngineController()
     m_boundedPlayback = 0;
     delete m_multiPlayback; // need to get a new instance of multi if played again
     m_multiPlayback = 0;
-    delete m_multiSource;
-    m_multiSource = 0;
 
     delete m_media.data();
     delete m_audio.data();
@@ -367,7 +365,6 @@ EngineController::play( Meta::TrackPtr track, uint offset )
     debug() << "play: bounded is "<<m_boundedPlayback<<"current"<<track->name();
     m_boundedPlayback = track->create<Capabilities::BoundedPlaybackCapability>();
     m_multiPlayback = track->create<Capabilities::MultiPlayableCapability>();
-    m_multiSource = track->create<Capabilities::MultiSourceCapability>();
 
     track->prepareToPlay();
     m_nextUrl = track->playableUrl();
@@ -377,13 +374,6 @@ EngineController::play( Meta::TrackPtr track, uint offset )
         connect( m_multiPlayback, SIGNAL(playableUrlFetched( const KUrl & )),
                  SLOT(slotPlayableUrlFetched( const KUrl & )) );
         m_multiPlayback->fetchFirst();
-    }
-    else if( m_multiSource )
-    {
-        debug() << "Got a MultiSource Track with " <<  m_multiSource->sources().count() << " sources";
-        connect( m_multiSource, SIGNAL(urlChanged( const KUrl & )),
-                 SLOT(slotPlayableUrlFetched( const KUrl & )) );
-        playUrl( track->playableUrl(), 0 );
     }
     else if( m_boundedPlayback )
     {
@@ -550,8 +540,7 @@ EngineController::stop( bool forceInstant, bool playingWillContinue ) //SLOT
         m_boundedPlayback = 0;
         delete m_multiPlayback; // need to get a new instance of multi if played again
         m_multiPlayback = 0;
-        delete m_multiSource;
-        m_multiSource = 0;
+        m_multiSource.reset();
 
         m_nextTrack.clear();
         m_nextUrl.clear();
@@ -955,7 +944,7 @@ EngineController::slotAboutToFinish()
     else if( m_multiSource )
     {
         debug() << "source finished, lets get the next one";
-        KUrl nextSource = m_multiSource->next();
+        KUrl nextSource = m_multiSource->nextUrl();
 
         if( !nextSource.isEmpty() )
         { //more sources
@@ -966,9 +955,10 @@ EngineController::slotAboutToFinish()
             slotPlayableUrlFetched( nextSource );
         }
         else if( m_media.data()->queue().isEmpty() )
-        { //go to next track
-            The::playlistActions()->requestNextTrack();
+        {
             debug() << "no more sources, skip to next track";
+            m_multiSource.reset(); // don't cofuse slotFinished
+            The::playlistActions()->requestNextTrack();
         }
     }
     else if( m_boundedPlayback )
@@ -1067,13 +1057,26 @@ EngineController::slotNewTrackPlaying( const Phonon::MediaSource &source )
         debug() << "Previous track finished completely, updating statistics";
         stampStreamTrackLength(); // update track length in stream for accurate scrobbling
         emit trackFinishedPlaying( m_currentTrack, 1.0 );
+
+        if( m_multiSource )
+            // advance source of a multi-source track
+            m_multiSource->setSource( m_multiSource->current() + 1 );
     }
     m_nextUrl.clear();
 
     if( m_nextTrack )
     {
+        // already unsubscribed
         m_currentTrack = m_nextTrack;
         m_nextTrack.clear();
+
+        m_multiSource.reset( m_currentTrack->create<Capabilities::MultiSourceCapability>() );
+        if( m_multiSource )
+        {
+            debug() << "Got a MultiSource Track with" <<  m_multiSource->sources().count() << "sources";
+            connect( m_multiSource.data(), SIGNAL(urlChanged(KUrl)),
+                     SLOT(slotPlayableUrlFetched(KUrl)) );
+        }
     }
 
     if( m_currentTrack
