src/core/capabilities/MultiSourceCapability.h
@@ -1,5 +1,6 @@
 /****************************************************************************************
  * Copyright (c) 2009 Nikolaj Hald Nielsen <nhn@kde.org>                                *
+ * Copyright (c) 2012 Matěj Laitl <matej@laitl.cz>                                      *
  *                                                                                      *
  * This program is free software; you can redistribute it and/or modify it under        *
  * the terms of the GNU General Public License as published by the Free Software        *
@@ -19,36 +20,53 @@
 
 #include "core/capabilities/Capability.h"
 
-#include <KUrl>
+class KUrl;
 
-namespace Capabilities {
-
-/**
-A capability for tracks that can have several different source urls, such as multiple fallback streams for a radio station. If one source url fails or finishes, the track will automatically use the next one. It is also possbile to get a list of all urls that can be presented to the user so he can choose.
-
-    @author Nikolaj Hald Nielsen <nhn@kde.org>
-*/
-class AMAROK_CORE_EXPORT MultiSourceCapability : public Capability
+namespace Capabilities
 {
-    Q_OBJECT
-public:
-    MultiSourceCapability();
+    /**
+     * A capability for tracks that can have several different source urls, such as
+     * multiple fallback streams for a radio station. If one source url fails or finishes,
+     * the track will automatically use the next one. It is also possbile to get a list
+     * of all urls that can be presented to the user so tha she can choose.
+     *
+     * @author Nikolaj Hald Nielsen <nhn@kde.org>
+     */
+    class AMAROK_CORE_EXPORT MultiSourceCapability : public Capability
+    {
+        Q_OBJECT
 
-    ~MultiSourceCapability();
+        public:
+            MultiSourceCapability();
+            virtual ~MultiSourceCapability();
 
-    static Type capabilityInterfaceType() { return Capabilities::Capability::MultiSource; }
+            static Type capabilityInterfaceType() { return MultiSource; }
 
-    virtual KUrl first() = 0;
-    virtual KUrl next() = 0;
-    virtual int current() = 0;
-    virtual QStringList sources() = 0;
-    virtual void setSource( int source ) = 0;
-    
-signals:
-    void urlChanged( const KUrl &url );
+            /**
+             * Return list of displayable urls in this MultiSource. Only for display
+             * purposes, don't attempt to play these urls.
+             */
+            virtual QStringList sources() const = 0;
 
-};
+            /**
+             * Set current source. Does nothing if @param current is out of bounds.
+             */
+            virtual void setSource( int source ) = 0;
 
+            /**
+             * Get index of the current source
+             */
+            virtual int current() const = 0;
+
+            /**
+             * Return the url of the next source without actually advancing to it.
+             * Returns empty url if the current source is the last one.
+             */
+            virtual KUrl nextUrl() const = 0;
+
+        signals:
+            void urlChanged( const KUrl &url );
+    };
 }
 
 #endif
